--- a/login.html
+++ b/login.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book</title>
+    <title>Login</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <form action="" method="" class="login">
+      <div class="field">
+        <label for="email">Email: </label>
+        <input type="email" name="email" id="email" required>
+      </div>
+      <div class="field">
+        <label for="pass">Password: </label>
+        <input type="password" name="pass" id="pass" required>
+      </div>
+      <input type="submit" value="Sign in" id="login">
+    </form>
+    <hr>
+    <!-- <p>Forgot password? <a href="reset.html">Reset</a></p> -->
+    <p>Don't have account? <a href="reg.html">Creat one</a></p>
   </body>
   <script src="./login.js"></script>
 </html>
