Some edits to suit styles

--- a/login.html
+++ b/login.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <form action="" method="" class="login">
       <div class="field">
-        <label for="email">Email: </label>
+        <label for="email">Email: </label><br>
         <input type="email" name="email" id="email" required>
       </div>
       <div class="field">
-        <label for="pass">Password: </label>
+        <label for="pass">Password: </label><br>
         <input type="password" name="pass" id="pass" required>
       </div>
-      <input type="submit" value="Sign in" id="login">
+      <input type="submit" value="Sign in" class="btn" id="login">
     </form>
-    <hr>
     <!-- <p>Forgot password? <a href="reset.html">Reset</a></p> -->
     <p>Don't have account? <a href="reg.html">Creat one</a></p>
   </body>
