--- a/reg.html
+++ b/reg.html
@@ -4,29 +4,28 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Registration</title>
-        <link rel="stylesheet" href="regStyle.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <form action="" method="get" class="login">
             <div class="field">
-                <label for="user">Fullname: </label>
+                <label for="user">Fullname: </label><br>
                 <input type="text" name="user" id="user" required>
             </div>
             <div class="field">
-                <label for="email">Email: </label>
+                <label for="email">Email: </label><br>
                 <input type="email" name="email" id="email" required>
             </div>
             <div class="field">
-                <label for="pass">Password: </label>
+                <label for="pass">Password: </label><br>
                 <input type="password" name="pass" id="pass" required>
             </div>
             <div class="field">
-                <label for="confirm">Confirm Password: </label>
+                <label for="confirm">Confirm Password: </label><br>
                 <input type="password" name="comfirm" id="confirm" required>
             </div>
-            <input type="submit" value="Sign up" id="reg">
+            <input type="submit" value="Sign up" class="btn" id="reg">
         </form>
-        <hr>
         <div>Have account? <a href="login.html">log in</a></div>
     </body>
     <script src="./reg.js"></script>
